--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,45 @@
-# Package files
-package.json
-package-lock.json
-# Node modules
-node_modules/
-
 # Logs
 logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Environment variables
-.env
-
-# OS generated files
-.DS_Store
-Thumbs.db
+# Dependency directories
+node_modules/
+bower_components/
 
 # Build directories
 dist/
+dist-ssr/
 build/
 
-# Dependency directories
-jspm_packages/
+# Environment files
+.env
+.env.*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Optional npm cache directory
-.npm
+# Package files
+package-lock.json
+package.json
+yarn.lock
+pnpm-lock.yaml
 
-# Optional eslint cache
-.eslintcache
+# Miscellaneous
+*.local
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.DS_Store
 
-# Optional REPL history
-.node_repl_history
-
-# IDE specific files
+# Editor directories and files
 .vscode/
+!.vscode/extensions.json
 .idea/
-
-# TypeScript
-*.tsbuildinfo
-
-# Coverage directory used by tools like istanbul
-coverage/
-
-# Temporary files
-tmp/
-temp/
