--- a/frontend/ZgjidhjeAI/.gitignore
+++ b/frontend/ZgjidhjeAI/.gitignore
@@ -1,5 +1,5 @@
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -26,7 +26,6 @@ build/
 
 # Package files
 package-lock.json
-package.json
 yarn.lock
 pnpm-lock.yaml
 
@@ -40,29 +39,6 @@ pnpm-lock.yaml
 .DS_Store
 
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
-.idea
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.idea/
